--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>Generative Art</header>
-
+  <canvas id="tiled-lines"></canvas>
 </body>
 
 <script type="module" src="/src/main.ts"></script>
