--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header>Generative Art</header>
   <canvas id="tiled-lines"></canvas>
+  <canvas id="joy-division"></canvas>
 </body>
 
 <script type="module" src="/src/main.ts"></script>
