--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 
 <body>
   <header>Generative Art</header>
-  <canvas id="tiled-lines"></canvas>
-  <canvas id="joy-division"></canvas>
+
+  <div id="images">
+    <div class="border">
+      <div class="frame">
+        <canvas id="tiled-lines"></canvas>
+      </div>
+    </div>
+    <div class="border">
+      <div class="frame">
+        <canvas id="joy-division"></canvas>
+      </div>
+    </div>
+  </div>
 </body>
 
 <script type="module" src="/src/main.ts"></script>
