--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
   <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eric Lee</title>
-  <script type="module" crossorigin src="./assets/index.f323c4f8.js"></script>
-  <link rel="stylesheet" href="./assets/index.f8a123d9.css">
+  <script type="module" crossorigin src="./assets/index.3f44fa85.js"></script>
+  <link rel="stylesheet" href="./assets/index.65c78ac9.css">
 </head>
 
 <body>
   <header>Generative Art</header>
-  <canvas id="tiled-lines"></canvas>
-  <canvas id="joy-division"></canvas>
+
+  <div id="images">
+    <div class="border">
+      <div class="frame">
+        <canvas id="tiled-lines"></canvas>
+      </div>
+    </div>
+    <div class="border">
+      <div class="frame">
+        <canvas id="joy-division"></canvas>
+      </div>
+    </div>
+  </div>
 </body>
 
 
