--- a/index.html
+++ b/index.html
@@ -12,16 +12,25 @@
   <header>Generative Art</header>
 
   <div id="images">
+
     <div class="border">
       <div class="frame">
         <canvas id="tiled-lines"></canvas>
       </div>
     </div>
+
     <div class="border">
       <div class="frame">
         <canvas id="joy-division"></canvas>
       </div>
     </div>
+
+    <div class="border">
+      <div class="frame">
+        <canvas id="aa"></canvas>
+      </div>
+    </div>
+
   </div>
 </body>
 
