--- a/index.html
+++ b/index.html
@@ -6,24 +6,33 @@
   <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eric Lee</title>
-  <script type="module" crossorigin src="./assets/index.3f44fa85.js"></script>
-  <link rel="stylesheet" href="./assets/index.65c78ac9.css">
+  <script type="module" crossorigin src="./assets/index.79823382.js"></script>
+  <link rel="stylesheet" href="./assets/index.68781bac.css">
 </head>
 
 <body>
   <header>Generative Art</header>
 
   <div id="images">
+
     <div class="border">
       <div class="frame">
         <canvas id="tiled-lines"></canvas>
       </div>
     </div>
+
     <div class="border">
       <div class="frame">
         <canvas id="joy-division"></canvas>
       </div>
     </div>
+
+    <div class="border">
+      <div class="frame">
+        <canvas id="aa"></canvas>
+      </div>
+    </div>
+
   </div>
 </body>
 
