Circle Tiled Lines

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
     <div class="border">
       <div class="frame">
+        <canvas id="tiled-circles"></canvas>
+      </div>
+    </div>
+
+    <div class="border">
+      <div class="frame">
         <canvas id="joy-division"></canvas>
       </div>
     </div>
