--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eric Lee</title>
-  <script type="module" crossorigin src="./assets/index.3248122b.js"></script>
+  <script type="module" crossorigin src="./assets/index.4f62ca79.js"></script>
   <link rel="stylesheet" href="./assets/index.68781bac.css">
 </head>
 
@@ -18,6 +18,12 @@
     <div class="border">
       <div class="frame">
         <canvas id="tiled-lines"></canvas>
+      </div>
+    </div>
+
+    <div class="border">
+      <div class="frame">
+        <canvas id="tiled-circles"></canvas>
       </div>
     </div>
 
