Moving projects into Folders

--- a/index.html
+++ b/index.html
@@ -3,43 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="data:,">
+  <link rel="icon" href="data:," />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eric Lee</title>
 </head>
 
 <body>
-  <header>Generative Art</header>
+  <header>Home: Interactive Projects</header>
 
-  <div id="images">
+  MAIN SITE UNDER CONSTRUCTION
 
-    <div class="border">
-      <div class="frame">
-        <canvas id="tiled-lines"></canvas>
-      </div>
-    </div>
-
-    <div class="border">
-      <div class="frame">
-        <canvas id="tiled-circles"></canvas>
-      </div>
-    </div>
-
-    <div class="border">
-      <div class="frame">
-        <canvas id="joy-division"></canvas>
-      </div>
-    </div>
-
-    <div class="border">
-      <div class="frame">
-        <canvas id="aa"></canvas>
-      </div>
-    </div>
-
-  </div>
+  <ul>
+    <li><a href="src/generative-art/index.html">Generative Art</a></li>
+    <li><a href="src/laser-simulation/index.html">Laser Simulation</a></li>
+  </ul>
 </body>
-
-<script type="module" src="/src/main.ts"></script>
 
 </html>
