--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <base href="./">
   <meta charset="UTF-8" />
   <link rel="icon" href="data:," />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,8 +15,8 @@
   MAIN SITE UNDER CONSTRUCTION
 
   <ul>
-    <li><a href="src/generative-art/index.html">Generative Art</a></li>
-    <li><a href="src/laser-simulation/index.html">Laser Simulation</a></li>
+    <li><a href="/generative-art/index.html">Generative Art</a></li>
+    <li><a href="/laser-simulation/index.html">Laser Simulation</a></li>
   </ul>
 </body>
 
