--- a/generative-art/index.html
+++ b/generative-art/index.html
@@ -6,15 +6,13 @@
   <link rel="icon" href="data:," />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eric Lee</title>
-  <script type="module" crossorigin src="./assets/generative_art.91f5a201.js"></script>
-  <link rel="modulepreload" href="./assets/modulepreload-polyfill.b7f2da20.js">
-  <link rel="stylesheet" href="./assets/generative_art.ca3a2404.css">
+  <script type="module" crossorigin src="/assets/generative_art.91f5a201.js"></script>
+  <link rel="modulepreload" href="/assets/modulepreload-polyfill.b7f2da20.js">
+  <link rel="stylesheet" href="/assets/generative_art.ca3a2404.css">
 </head>
 
 <body>
   <header>Generative Art</header>
-
-  temp
 
   <div id="images">
     <div class="border">
