--- a/laser-simulation/index.html
+++ b/laser-simulation/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" href="data:," />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eric Lee</title>
-  <script type="module" crossorigin src="./assets/laser_simulation.dc5f5b7e.js"></script>
-  <link rel="modulepreload" href="./assets/modulepreload-polyfill.b7f2da20.js">
+  <script type="module" crossorigin src="/assets/laser_simulation.dc5f5b7e.js"></script>
+  <link rel="modulepreload" href="/assets/modulepreload-polyfill.b7f2da20.js">
 </head>
 
 <body>
