--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   MAIN SITE UNDER CONSTRUCTION
 
   <ul>
-    <li><a href="src/generative-art/index.html">Generative Art</a></li>
-    <li><a href="src/laser-simulation/index.html">Laser Simulation</a></li>
+    <li><a href="./generative-art/index.html">Generative Art</a></li>
+    <li><a href="./laser-simulation/index.html">Laser Simulation</a></li>
   </ul>
 </body>
 
