--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   MAIN SITE UNDER CONSTRUCTION
 
   <ul>
-    <li><a href="/visuals/generative-art/">Generative Art</a></li>
-    <li><a href="/visuals/laser-simulation/">Laser Simulation</a></li>
+    <li><a href="./generative-art/">Generative Art</a></li>
+    <li><a href="./laser-simulation/">Laser Simulation</a></li>
   </ul>
 </body>
 
