--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   MAIN SITE UNDER CONSTRUCTION
 
   <ul>
-    <li><a href="./generative-art/index.html">Generative Art</a></li>
+    <li><a href="./generative-art">Generative Art</a></li>
     <li><a href="./laser-simulation">Laser Simulation</a></li>
   </ul>
 </body>
