Remove Trailing Slash

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <ul>
     <li><a href="./generative-art">Generative Art</a></li>
     <li><a href="./laser-simulation">Laser Simulation</a></li>
-    <li><a href="./canvas-objects/">Canvas OOP Tests</a></li>
+    <li><a href="./canvas-objects">Canvas OOP Tests</a></li>
   </ul>
 </body>
 
