--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
   <ul>
     <li><a href="./generative-art">Generative Art</a></li>
+    <li><a href="./boids">Boids Simulation</a></li>
     <li><a href="./laser-simulation">Laser Simulation</a></li>
     <li><a href="./canvas-objects">Canvas OOP Tests</a></li>
   </ul>
