--- a/src/boids/index.html
+++ b/src/boids/index.html
@@ -4,32 +4,53 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eric Lee</title>
+    <title>Boid Simulation</title>
   </head>
 
   <body>
     <header>Boids</header>
     <canvas id="canvas-board"></canvas>
 
-    <div>
-      <label for="coherance-slider">Coherance:</label>
-      <input type="range" id="coherance-slider" min="0" max="100" value="50" />
-      <output id="coherance-output">50</output>
-    </div>
+    <form id="value-editor" autocomplete="off">
+      <div>
+        <label for="coherance-slider">Coherance:</label>
+        <input
+          type="range"
+          id="coherance-slider"
+          min="0"
+          max="100"
+          value="50"
+        />
+        <output id="coherance-output">50</output>
+      </div>
 
-    <div>
-      <label for="alignment-slider">Alignment:</label>
-      <input type="range" id="alignment-slider" min="0" max="100" value="50" />
-      <output id="alignment-output">50</output>
-    </div>
+      <div>
+        <label for="alignment-slider">Alignment:</label>
+        <input
+          type="range"
+          id="alignment-slider"
+          min="0"
+          max="100"
+          value="50"
+        />
+        <output id="alignment-output">50</output>
+      </div>
 
-    <div>
-      <label for="separation-slider">Separation:</label>
-      <input type="range" id="separation-slider" min="0" max="100" value="50" />
-      <output id="separation-output">50</output>
-    </div>
+      <div>
+        <label for="separation-slider">Separation:</label>
+        <input
+          type="range"
+          id="separation-slider"
+          min="0"
+          max="100"
+          value="50"
+        />
+        <output id="separation-output">50</output>
+      </div>
+    </form>
 
     <button id="restart-button">Restart</button>
+    <button id="wrap-button">Toggle Wrap</button>
   </body>
 
   <script type="module" src="./main.ts"></script>
