--- a/src/boids/index.html
+++ b/src/boids/index.html
@@ -10,7 +10,20 @@
   <body>
     <header>Boids: Flocking Algorithm</header>
 
-    <div class="simulation">
+    <section class="chapter">
+      <h1>BOIDS</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </section>
+
+    <section class="simulation">
       <canvas id="canvas-board"></canvas>
       <div class="controls">
         <form id="value-editor" autocomplete="off">
@@ -35,7 +48,48 @@
           <button id="wrap-button">Toggle Wrap</button>
         </div>
       </div>
-    </div>
+    </section>
+
+    <section class="chapter">
+      <h1>Further Reading</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </section>
+
+    <footer>
+      <p>
+        By Eric Lee @
+        <a target="_blank" rel="noreferrer" href="https://www.ericchanlee.com"
+          >www.ericchanlee.com</a
+        >
+      </p>
+      <p>
+        View the
+        <a
+          target="_blank"
+          rel="noreferrer"
+          href="https://github.com/ericlovesmath/generative-art/tree/master/src/boids"
+          >source code</a
+        >
+        on Github
+      </p>
+    </footer>
   </body>
 
   <script type="module" src="./main.ts"></script>
